--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -3,6 +3,7 @@
 \usetikzlibrary{positioning, backgrounds, fit}
 
 \usepackage{amsmath}
+\usepackage{multirow}
 
 \newcommand{\indep}{\raisebox{0.05em}{\rotatebox[origin=c]{90}{$\models$}}}
 \newcommand{\nindep}{{\rotatebox[origin=c]{90}{$\nvDash$}}}
@@ -11,9 +12,13 @@
 
 \usetheme{default}
 
-\title{Estimating bayesian graphical models with EM}
+\title{Estimating bayesian mutliple graphical models with EM}
 \author{Luca Bracone}
 \begin{document}
+\begin{frame}
+	\titlepage
+\end{frame}
+
 \begin{frame}{Undirected bayesian graph}
 	\begin{center}
 		\begin{tikzpicture}
@@ -37,28 +42,26 @@
 			edge node{} (g6);
 		\end{tikzpicture}
 	\end{center}
-	There is an edge $(i,j)$ if and only if $y_i \nindep y_j | y_{-ij}$
+	There is an edge $(i,j)$ if and only if $y_i \nindep y_j | y_{-i, -j}$
 \end{frame}
 \begin{frame}{Setting and assumptions}
 	We observe $p$ parameters across $n$ samples. That is we have
-	$n$ observations $y_1, \dots, y_n \in \mathbb{R}^p$ of a $p$ dimensional
-	vector. We assume that $y_1, \dots, y_n \stackrel{i.i.d.}{\sim}
+	$n$ observations $y^1, \dots, y^n \in \mathbb{R}^p$ of a $p$ dimensional
+	vector. We assume that $y^1, \dots, y^n \stackrel{i.i.d.}{\sim}
 		\mathcal{N}_p(0, \Sigma)$ have a multivariate normal distribution.
 	\begin{itemize}
 		\item To estimate the graph we would like to know whether $y_i \nindep
-			      y_j | y_{-ij}$.
+			      y_j | y_{-i,-j}$.
 		\item Idea: We know that in the \emph{precision matrix,} $\Omega =
 			      \Sigma^{-1}$ the $(i,j)$-th entry is zero only if $y_i \indep y_j |
-			      y_{-ij}$
+			      y_{-i, -j}$
 		\item How do we find the zero entries of $\Omega$ ?
 	\end{itemize}
 \end{frame}
 \begin{frame}{Why should we use the Bayesian method ?}
 	\begin{itemize}
-		\item We have access to the empirical precision matrix, we could derive
-		      statistical tests.
-		\item This method becomes cumbersome when the number of parameters $p$
-		      becomes large.
+		\item Flexible hierarchical modeling
+		\item Ease of interpretation of results
 	\end{itemize}
 	If we consider $\Omega$ as being drawn from a prior distribution
 	$p(\Omega)$ we can obtain a \emph{posterior distrbution} $p(\Omega | X)$
@@ -69,10 +72,10 @@
 	The spike and slab prior for $\Omega$ helps us differentiate between zero
 	and non-zero entries of $\Omega$
 	\begin{align*}
-		y | \Omega                & \sim N_p(0, \Omega^{-1}),                                                          \\
-		\omega_{ij} | \delta_{ij} & \sim \delta_{ij} N(0, v_1^2) + (1 - \delta_{ij}) N(0, v_0^2) \text{for } i \neq j, \\
-		\omega_{ii}               & \sim Exp(\lambda/2),                                                               \\
-		\delta_{ij} | \pi         & \sim Bern(\pi),                                                                    \\
+		y | \Omega                & \sim N_p(0, \Omega^{-1}),                                               \\
+		\omega_{ij} | \delta_{ij} & \sim \delta_{ij} N(0, v_1^2) + (1 - \delta_{ij}) N(0, v_0^2), i \neq j, \\
+		\omega_{ii}               & \sim Exp(\lambda/2),                                                    \\
+		\delta_{ij} | \pi         & \sim Bern(\pi),                                                         \\
 		\pi                       & \sim Beta(a,b).
 	\end{align*}
 \end{frame}
@@ -94,21 +97,21 @@
 \begin{frame}{Taking expectations}
 	\begin{align*}
 		 & Q(\Omega, \pi | \Omega^{(l)}, \pi^{(l)}) = E_{\delta | Y, \Omega^{(l)},
-		\pi^{(l)}}(\log(p(\Omega, \delta, \pi | Y) | Y, \Omega^{(l)}, \pi^{(l)} ) =             \\
-		 & - \sum_{j<k} \frac{\omega_{jk}^2}{2} E\left(\frac{1}{v_0^2 (1 - \delta_{jk}) + v_1^2
-		\delta_{jk}}\right) - \sum_j \frac{\lambda}{2} \omega_{jj}                              \\
-		 & + \sum_{j<k} E(\delta_{jk}) \log\left(\frac{\pi}{1-\pi}\right) + \log(1
-		- \pi)                                                                                  \\
-		 & + (a - 1) \log(\pi) + (b - 1) \log(1 - \pi)                                          \\
+		\pi^{(l)}}(\log(p(\Omega, \delta, \pi | Y) | Y, \Omega^{(l)}, \pi^{(l)} ) =                                   \\
+		 & - \sum_{j<k} \frac{\omega_{jk}^2}{2} E_{\delta_{jk} | \cdot}\left(\frac{1}{v_0^2 (1 - \delta_{jk}) + v_1^2
+		\delta_{jk}}\right) - \sum_j \frac{\lambda}{2} \omega_{jj}                                                    \\
+		 & + \sum_{j<k} E_{\delta_{jk} | \cdot}(\delta_{jk}) \log\left(\frac{\pi}{1-\pi}\right) + \log(1
+		- \pi)                                                                                                        \\
+		 & + (a - 1) \log(\pi) + (b - 1) \log(1 - \pi)                                                                \\
 		 & + \frac{n}{2} \log\det(\Omega) - \frac{1}{2} \tr(Y^t Y \Omega)
 		+ \text{constants.}
 	\end{align*}
 \end{frame}
 \begin{frame}{Computing expectation terms}
-	\[q_{jk} := E(\delta_{jk}) = \frac{\pi p(\omega_{jk} | \delta = 1)}{\pi p(\omega_{jk}
+	\[q_{jk} := E_{\delta_{jk} | \cdot}(\delta_{jk}) = \frac{\pi p(\omega_{jk} | \delta = 1)}{\pi p(\omega_{jk}
 			| \delta = 1) + (1 - \pi) p(\omega_{jk} | \delta = 0)}.\]
 	And
-	\[ d_{jk} := E\left(\frac{1}{v_0^2 (1 - \delta_{jk}) + v_1^2
+	\[ d_{jk} := E_{\delta_{jk} | \cdot}\left(\frac{1}{v_0^2 (1 - \delta_{jk}) + v_1^2
 				\delta_{jk}}\right) = \frac{1 - q_{jk}}{v_0^2} + \frac{q_{jk}}{v_1^2} \]
 \end{frame}
 \begin{frame}{Maximising $\pi$}
@@ -133,18 +136,43 @@
 	\[\omega_{22} \sim Gamma\left(\frac{n}{2} + 1, \frac{s_{22} +
 			\lambda}{2}\right) + \omega_{12}^t\Omega_{11}^{-1}\omega_{12}.\]
 	Taking the modes we find the update steps
-	\[\omega_{12}^{(l+1)} = -((s_{22} + \lambda) \Omega_11^{-1} + \diag(d_{12}))^{-1} s_{12} \]
+	\[\omega_{12}^{(l+1)} = -((s_{22} + \lambda) \Omega_{11}^{-1} + \diag(d_{12}))^{-1} s_{12} \]
 	\[\omega_{22}^{(l+1)} = \frac{n}{s_{22} + \lambda} + (\omega_{12}^{(l+1)})^t \Omega_{11}^{-1}\omega_{12}^{(l+1)}\]
 \end{frame}
 \begin{frame}{Simulations}
-	We perform simulations with $n=100$ and $p \in \{50, 100, 200\}$ in the two
-	follwing cases
-	\begin{itemize}
-		\item When the underlying graph is a ``bernouilli" random graph
-		\item When the underlying graph has a clustered structure
-		\item When the underlying graph has a hub structure
-	\end{itemize}
-	We compare F1 scores with the R package \texttt{huge}. The results are displayed in the following table
+	We compare F1 scores with estimates produced by the method from
+	Meinshausen-Buhlmann (2006), R package \texttt{huge}. The results are
+	displayed in the following table
+	\begin{table}
+		\centering
+		\small
+		\caption{$n=50$, $p \in \{25, 50, 100\}$, ``cheating"}
+		\begin{tabular}{|l||c|c|c|c|}
+			\hline
+			graph                    & method & 25   & 50   & 100  \\
+			\hline
+			\multirow{2}{*}{random}  & EMGS   & 0.87 & 0.83 & 0.75 \\
+			                         & huge   & 0.89 & 0.85 & 0.76 \\
+			\hline
+			\multirow{2}{*}{cluster} & EMGS   & 0.73 & 0.70 & 0.67 \\
+			                         & huge   & 0.75 & 0.70 & 0.63 \\
+			\hline
+		\end{tabular}
+	\end{table}
+	\begin{table}
+		\centering
+		\small
+		\caption{$n=200$, $p \in \{25, 35, 50\}$, more honest}
+		\begin{tabular}{|l||c|c|c|c|}
+			\hline
+			graph                    & method & 25   & 50   & 100  \\
+			\hline
+			\multirow{2}{*}{cluster} & EMGS   & 0.68 & 0.67 & 0.67 \\
+			                         & huge   & 0.89 & 0.87 & 0.89 \\
+			\hline
+		\end{tabular}
+	\end{table}
+	\[F1 = 2 \frac{precision \ast recall}{precision+recall}\]
 \end{frame}
 \begin{frame}{Future work}
 	The original aim of the project: multiple graphs.
@@ -153,8 +181,8 @@
 		y | \Omega_k                & \sim N_p(0, \Omega_k^{-1}),                                                          \\
 		\omega_{ijk} | \delta_{ijk} & \sim \delta_{ijk} N(0, v_1^2) + (1 - \delta_{ijk}) N(0, v_0^2) \text{for } i \neq j, \\
 		\omega_{iik}                & \sim Exp(\lambda_k/2),                                                               \\
-		\delta_{ijk} | \gamma_{k}   & \sim Bern(\Phi(\gamma_{k})),                                                         \\
-		\gamma                      & \sim N(0, \Sigma).
+		\delta_{ijk} | \theta_{ijk} & \sim Bern(\Phi(\theta_{ijk})),                                                       \\
+		\theta_{ij}                 & \sim N_K(0, \Sigma).
 	\end{align*}
 	The parameter $\Sigma$ is a shared parameter across graphs.
 \end{frame}
